assets/scss/partials/layout/list.scss
.section-card {
    border-radius: var(--card-border-radius);
    background-color: var(--card-background);
    padding: var(--small-card-padding);
    box-shadow: var(--shadow-l1);
    margin-bottom: var(--section-separation);
    display: flex;
    align-items: center;

    --separation: 15px;

    .section-term {
        font-size: 2.2rem;
        margin: 0;
        margin-top: calc(var(--separation) / 2);
        color: var(--card-text-color-main);

        & + .section-description {
            margin-top: var(--separation);
        }
    }

    .section-description {
        font-weight: normal;
        color: var(--card-text-color-secondary);
        font-size: 1.6rem;
        margin: 0;
    }

    .section-details {
        flex-grow: 1;
        margin-right: 20px;
    }

    .section-image {
        img {
            width: 60px;
            height: 60px;
            border-radius: var(--card-border-radius);
        }
    }

    .section-count {
        color: var(--card-text-color-tertiary);
        font-size: 1.4rem;
        margin: 0;
        font-weight: bold;
        text-transform: uppercase;
    }
}

.subsection-list {
    margin-bottom: var(--section-separation);
    overflow-x: auto;

    .article-list--tile {
        display: grid;
        grid-template-columns: auto;
        grid-column-gap: 15px;
        grid-row-gap: 15px;

        @include respond(md) {
            grid-template-columns: auto auto;
        }

        @include respond(2xl) {
            grid-template-columns: auto auto auto;
        }

        padding-bottom: 15px;

        article {
            .article-details {
                padding: 20px;
            }
        }
    }
}

